Responsive styles for mobile sizes, fixed the header spacing on mobile too.

--- a/src/App.scss
+++ b/src/App.scss
@@ -242,24 +242,37 @@ $text-link: #5db2a6;
 }
 
 .showcase-container {
+  // border: 1px solid yellow;
   display: flex;
+  flex-wrap: wrap;
   border-bottom: 1px solid grey;
-  padding-bottom: 3rem;
-  margin: 6rem 3rem 3rem 3rem;
+  padding: 3rem;
+  justify-content: center;
+  align-items: center;
 }
 
 .showcase-image-block {
+  // border: 1px solid green;
   margin: 2rem;
   height: 400px;
-  flex: 0 0 60%;
+  flex: 0 0 100%;
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
   box-sizing: border-box;
+
+  @include small {
+    flex: 0 0 100%;
+  }
+  @include medium {
+    flex: 0 0 45%;
+  }
 }
 
 .showcase-text-container {
-  padding: 0 2rem 0 2rem;
+  border: 1px solid red;
+  flex: 0 0 100%;
+
   .showcase-title {
     h1 {
       letter-spacing: 0.6px;
@@ -268,6 +281,10 @@ $text-link: #5db2a6;
       font-weight: 300;
       text-transform: uppercase;
     }
+  }
+
+  @include medium {
+    flex: 0 0 35%;
   }
 }
 
